# Harlem-Grown-Sponsorship

./: .env.example  .gitignore  README.md  chat.py  config.py  harlem_grown_prd.md  implementation_plan.md  main.py  playground.py  pyproject.toml  requirements.txt  test_agents.py
.claude/rules/: managed
agents/: discovery.py  qualifier.py  researcher.py  team.py
docs/: CLAUDE.md  sponsor_criteria_framework.md  vibe4good_system_updates_summary.md
knowledge_base/: harlem_grown_overview.md  impact_stories.md  programs.md  sponsorship_tiers.md
models/: schemas.py
scripts/: chat.py  test_agents.py
seed/: curated_seed_list.json
skills/sponsor-scoring-rubric/: SKILL.md
skills/sponsor-scoring-rubric/references/: archetypes.md  scoring-rubric.md
tools/: companies_api.py  kb_tools.py  scraper.py
