[project]
name = "harlem-grown"
version = "0.1.0"
description = "Harlem Grown Corporate Prospect Intelligence — multi-agent system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=2.5.6",
    "anthropic>=0.49.0",
    "openai>=2.24.0",
    "crawl4ai>=0.4.0",
    "pymupdf>=1.24.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "tiktoken>=0.7.0",
    "sqlalchemy[asyncio]>=2.0.48",
    "aiosqlite>=0.22.1",
]
